# -axiomhive-identity-ecosystem

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: python.yml  rust.yml
axion-core/: Cargo.toml
axion-core/src/: lib.rs  main.rs
axion-core/src/corelogic/: mod.rs
axion-core/src/dynamicquant/: mod.rs
axion-core/src/hal/: mod.rs  x86.rs
config/: ansible_playbook.yml  requirements.txt
docs/: euclid_zero_engine.html  index.md
frontend/: .pnp.cjs  package.json
frontend/app/: page.js
frontend/pages/: index.js
k8s/: deployment.yml
monitoring/: prometheus_exporter.py
scripts/: check_deps.py
src/: arc_integration.py  config.py  core_logic.py  hydra_wyrm_ux.py  main.py
tests/: test_api.py  test_main.py
tests/integration/: test_api_endpoints.py  test_frontend.js  test_main.py  test_react_components.js
tests/unit/: test_arc_integration.py  test_arc_zkp.py  test_betti.py  test_cli.py  test_main_utils.py  test_tda_betti.py  test_tda_viz.py  test_zkp_attest.py  test_zkp_frontend.py
web-ui/: index.html
